add crawl config to service configuration

--- a/packages/resource-deployment/runtime-config/runtime-config.ci.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.ci.json
@@ -20,5 +20,8 @@
     },
     "availabilityTestConfig": {
         "environmentDefinition": "canary"
+    },
+    "crawlConfig": {
+        "urlCrawlLimit": 100
     }
 }
