--- a/packages/resource-deployment/runtime-config/runtime-config.ppe.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.ppe.json
@@ -20,5 +20,8 @@
     },
     "availabilityTestConfig": {
         "environmentDefinition": "insider"
+    },
+    "crawlConfig": {
+        "urlCrawlLimit": 100
     }
 }
