--- a/packages/resource-deployment/runtime-config/runtime-config.selftest.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.selftest.json
@@ -19,5 +19,8 @@
     },
     "availabilityTestConfig": {
         "environmentDefinition": "canary"
+    },
+    "crawlConfig": {
+        "urlCrawlLimit": 100
     }
 }
