--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "resolutions": {
         "axe-core": "4.1.1",
         "apify-shared": ">=0.5.0",
-        "axios": ">=0.21.1"
+        "axios": ">=0.21.1",
+        "socket.io": ">=2.4.0"
     }
 }
