--- a/packages/azure-services/package.json
+++ b/packages/azure-services/package.json
@@ -47,7 +47,7 @@
         "@azure/identity": "^1.2.2",
         "@azure/keyvault-secrets": "^4.1.0",
         "@azure/ms-rest-nodeauth": "^3.0.6",
-        "@azure/storage-blob": "12.3.0",
+        "@azure/storage-blob": "^12.3.0",
         "@azure/storage-queue": "^12.3.0",
         "common": "^1.0.0",
         "dotenv": "^8.2.0",
