--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "resolutions": {
         "axe-core": "4.1.1",
         "apify-shared": ">=0.5.0",
-        "axios": ">=0.21.1",
-        "socket.io": ">=2.4.0"
+        "axios": ">=0.21.1"
     }
 }
