--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -50,8 +50,10 @@
     },
     "dependencies": {
         "@axe-core/puppeteer": "^4.1.0",
-        "@azure/cosmos": "^3.9.5",
+"@azure/cosmos": "^3.9.3",
+        "accessibility-insights-crawler": "^1.0.0",
         "accessibility-insights-report": "4.0.0",
+        "apify": "^0.21.8",
         "applicationinsights": "^1.8.8",
         "axe-core": "4.1.1",
         "axe-sarif-converter": "^2.6.0",
