--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -23,6 +23,7 @@
     },
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {
+        "@types/cheerio": "^0.22.23",
         "@types/dotenv": "^8.2.0",
         "@types/jest": "^26.0.20",
         "@types/lodash": "^4.14.165",
@@ -50,7 +51,7 @@
     },
     "dependencies": {
         "@axe-core/puppeteer": "^4.1.0",
-        "@azure/cosmos": "^3.9.3",
+        "@azure/cosmos": "^3.9.5",
         "accessibility-insights-crawler": "^1.0.0",
         "accessibility-insights-report": "4.0.0",
         "apify": "^0.21.8",
@@ -60,6 +61,7 @@
         "axe-result-converter": "^1.0.0",
         "azure-services": "^1.0.0",
         "common": "^1.0.0",
+        "cheerio": "^1.0.0-rc.3",
         "dotenv": "^8.2.0",
         "inversify": "^5.0.5",
         "leveldown": "^5.6.0",
