--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -67,6 +67,7 @@
         "leveldown": "^5.6.0",
         "lodash": "^4.17.20",
         "logger": "1.0.0",
+        "moment": "^2.29.1",
         "puppeteer": "^5.5.0",
         "reflect-metadata": "^0.1.13",
         "scanner-global-library": "1.0.0",
