update files names

--- a/packages/web-api-scan-job-manager/docker-image-config/Dockerfile
+++ b/packages/web-api-scan-job-manager/docker-image-config/Dockerfile
@@ -21,4 +21,4 @@ COPY . .
 # Install app dependencies
 RUN npm install
 
-CMD ["powershell.exe", "./add-MSI-route.ps1"]
+ENTRYPOINT ["powershell.exe", "./web-api-scan-job-manager.ps1"]
