--- a/packages/web-api-scan-job-manager/docker-image-config/Dockerfile
+++ b/packages/web-api-scan-job-manager/docker-image-config/Dockerfile
@@ -1,6 +1,19 @@
 # Copyright (c) Microsoft Corporation. All rights reserved.
 # Licensed under the MIT License.
-FROM node:12-slim
+FROM mcr.microsoft.com/windows:1809-amd64
+
+ENV NODE_VERSION 12.20.2
+
+USER ContainerAdministrator
+
+RUN powershell Set-ExecutionPolicy RemoteSigned
+
+RUN setx /m PATH "%PATH%;C:\nodejs"
+
+RUN powershell -Command \
+    Invoke-WebRequest $('https://nodejs.org/dist/v{0}/node-v{0}-win-x64.zip' -f $env:NODE_VERSION) -OutFile 'node.zip' -UseBasicParsing ; \
+    Expand-Archive node.zip -DestinationPath C:\ ; \
+    Rename-Item -Path $('C:\node-v{0}-win-x64' -f $env:NODE_VERSION) -NewName 'C:\nodejs'
 
 # Bundle app source
 COPY . .
@@ -8,4 +21,4 @@ COPY . .
 # Install app dependencies
 RUN npm install
 
-ENTRYPOINT [ "node", "./web-api-scan-job-manager.js" ]
+ENTRYPOINT ["powershell.exe", "./web-api-scan-job-manager.ps1"]
