--- a/packages/web-api-scan-runner/docker-image-config/Dockerfile
+++ b/packages/web-api-scan-runner/docker-image-config/Dockerfile
@@ -1,37 +1,24 @@
 # Copyright (c) Microsoft Corporation. All rights reserved.
 # Licensed under the MIT License.
-FROM node:12-slim
+FROM mcr.microsoft.com/windows:1809-amd64
 
-# Install latest chrome dev package and fonts to support major charsets (Chinese, Japanese, Arabic, Hebrew, Thai and a few others)
-# Note: this installs the necessary libs to make the bundled version of Chromium that Puppeteer
-# installs, work.
-RUN apt-get update \
-    && apt-get install -y wget gnupg \
-    && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
-    && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' \
-    && apt-get update \
-    && apt-get install -y google-chrome-stable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst fonts-freefont-ttf libxss1 libxtst6 procps \
-    --no-install-recommends \
-    && rm -rf /var/lib/apt/lists/*
+ENV NODE_VERSION 12.20.2
 
-# Install app dependencies
-COPY package.json ./
+USER ContainerAdministrator
+RUN powershell Set-ExecutionPolicy RemoteSigned
 
-RUN npm install \
-    # Force npm package resolution
-    && npx npm-force-resolutions@0.0.3 \
-    && npm install \
-    # Add user so we don't need --no-sandbox.
-    # same layer as npm install to keep re-chowned files from using up several hundred MBs more space
-    && groupadd -r pptruser && useradd -r -g pptruser -G audio,video pptruser \
-    && mkdir -p /home/pptruser/Downloads \
-    && chown -R pptruser:pptruser /home/pptruser \
-    && chown -R pptruser:pptruser /node_modules
+RUN setx /m PATH "%PATH%;C:\nodejs"
 
-# Run everything after as non-privileged user.
-USER pptruser
+RUN powershell -Command \
+    Invoke-WebRequest $('https://nodejs.org/dist/v{0}/node-v{0}-win-x64.zip' -f $env:NODE_VERSION) -OutFile 'node.zip' -UseBasicParsing ; \
+    Expand-Archive node.zip -DestinationPath C:\ ; \
+    Rename-Item -Path $('C:\node-v{0}-win-x64' -f $env:NODE_VERSION) -NewName 'C:\nodejs'
 
 # Bundle app source
 COPY . .
 
-ENTRYPOINT [ "node", "./web-api-scan-runner.js" ]
+# Install app dependencies
+RUN npm install
+
+ENTRYPOINT ["powershell.exe", "./web-api-scan-runner.ps1"]
+
