Initial files for new host-browser-service package; includes basic jest/tsconfig/webpack files with placeholder server entry point. Logs when run. Upcoming PRs will add actual functionality. Adding these first to aid future review

--- a/azure-pipeline/build-artifacts-and-run-tests-job.yaml
+++ b/azure-pipeline/build-artifacts-and-run-tests-job.yaml
@@ -39,6 +39,7 @@ steps:
               e2e-web-apis/dist/**/*
               functional-tests/dist/**/*
               health-client/dist/**/*
+              host-browser-service/dist/**/*
               cli/drop/*
               !**/node_modules/**/*
               !**/.vscode/**/*
