Converting website data provider to support multiparts documents

--- a/packages/storage-documents/tsconfig.json
+++ b/packages/storage-documents/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "../../tsconfig.base.json",
     "compilerOptions": {
-        "outDir": "dist"
+        "outDir": "dist",
+        "plugins": [{ "transform": "ts-transformer-keys/transformer" }]
     }
 }
