--- a/packages/storage-documents/package.json
+++ b/packages/storage-documents/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "scripts": {
-        "build": "tsc && echo",
+        "build": "ttsc && echo",
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist test-results",
         "lint": "eslint -c ../../.eslintrc.js --ext .ts ./",
@@ -28,6 +28,8 @@
         "jest-circus": "^26.6.3",
         "jest-junit": "^12.0.0",
         "rimraf": "^3.0.2",
+        "ttypescript": "^1.5.12",
+        "ts-transformer-keys": "^0.4.3",
         "ts-jest": "^26.4.4",
         "typemoq": "^2.1.0",
         "typescript": "^4.1.3"
