--- a/packages/host-browser-service/package.json
+++ b/packages/host-browser-service/package.json
@@ -20,6 +20,7 @@
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {
         "@types/chai": "^4.2.14",
+        "@types/http-proxy": "^1.17.5",
         "@types/jest": "^26.0.20",
         "@types/lodash": "^4.14.168",
         "@types/node": "^12.12.54",
@@ -33,8 +34,10 @@
     },
     "dependencies": {
         "common": "^1.0.0",
+        "http-proxy": "^1.18.1",
         "inversify": "^5.0.5",
         "logger": "1.0.0",
+        "puppeteer": "^5.5.0",
         "reflect-metadata": "^0.1.13",
         "scanner-global-library": "1.0.0",
         "service-library": "1.0.0"
