Set deep scan upper limit for know URLs

--- a/packages/resource-deployment/runtime-config/runtime-config.prod.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.prod.json
@@ -21,6 +21,7 @@
         "environmentDefinition": "production"
     },
     "crawlConfig": {
-        "urlCrawlLimit": 100
+        "deepScanDiscoveryLimit": 100,
+        "deepScanUpperLimit": 3000
     }
 }
