--- a/packages/resource-deployment/runtime-config/runtime-config.ppe.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.ppe.json
@@ -8,12 +8,6 @@
     "queueConfig": {
         "maxQueueSize": 40
     },
-    "scanConfig": {
-        "minLastReferenceSeenInDays": 3,
-        "pageRescanIntervalInDays": 3,
-        "failedPageRescanIntervalInHours": 3,
-        "maxScanRetryCount": 3
-    },
     "restApiConfig": {
         "scanRequestProcessingDelayInSeconds": 300
     },
@@ -21,6 +15,7 @@
         "environmentDefinition": "insider"
     },
     "crawlConfig": {
-        "urlCrawlLimit": 100
+        "deepScanDiscoveryLimit": 100,
+        "deepScanUpperLimit": 3000
     }
 }
