Scan request selector

--- a/packages/web-api-scan-request-sender/package.json
+++ b/packages/web-api-scan-request-sender/package.json
@@ -44,6 +44,7 @@
         "common": "^1.0.0",
         "inversify": "^5.0.5",
         "logger": "1.0.0",
+        "moment": "^2.29.1",
         "reflect-metadata": "^0.1.13",
         "service-library": "1.0.0",
         "storage-documents": "1.0.0",
