--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@typescript-eslint/eslint-plugin-tslint": "^4.20.0",
         "@typescript-eslint/parser": "^4.14.1",
         "codecov": "^3.8.1",
+        "commander": "^7.2.0",
         "eslint": "^7.17.0",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jest": "^24.3.2",
@@ -50,6 +51,7 @@
         "license-check-and-add": "^4.0.2",
         "npm-run-all": "^4.1.5",
         "prettier": "2.2.1",
+        "simple-git": "^2.38.0",
         "syncpack": "^5.7.11",
         "tslint": "^6.1.3",
         "typescript": "^4.1.3"
