Injection pipeline performance improvement

--- a/packages/service-library/package.json
+++ b/packages/service-library/package.json
@@ -31,7 +31,7 @@
         "jest-circus": "^26.6.3",
         "jest-extended": "^0.11.5",
         "jest-junit": "^12.0.0",
-        "mockdate": "^3.0.2",
+        "mockdate": "^3.0.5",
         "rimraf": "^3.0.2",
         "ts-jest": "^26.4.4",
         "typemoq": "^2.1.0",
@@ -49,6 +49,7 @@
         "logger": "1.0.0",
         "moment": "^2.29.1",
         "node-fetch": "^2.6.1",
+        "p-limit": "^3.1.0",
         "puppeteer": "^5.5.0",
         "reflect-metadata": "^0.1.13",
         "sha.js": "^2.4.11",
