--- a/packages/web-workers/package.json
+++ b/packages/web-workers/package.json
@@ -37,7 +37,7 @@
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
         "jest-junit": "^12.0.0",
-        "mockdate": "^3.0.2",
+        "mockdate": "^3.0.5",
         "node-loader": "^1.0.2",
         "npm-run-all": "^4.1.5",
         "rimraf": "^3.0.2",
@@ -57,6 +57,7 @@
         "lodash": "^4.17.21",
         "logger": "1.0.0",
         "moment": "^2.29.1",
+        "p-limit": "^3.1.0",
         "reflect-metadata": "^0.1.13",
         "service-library": "1.0.0",
         "storage-documents": "1.0.0",
