--- a/packages/azure-services/package.json
+++ b/packages/azure-services/package.json
@@ -31,7 +31,7 @@
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
         "jest-junit": "^12.0.0",
-        "mockdate": "^3.0.2",
+        "mockdate": "^3.0.5",
         "npm-run-all": "^4.1.5",
         "rimraf": "^3.0.2",
         "ts-jest": "^26.4.4",
@@ -56,6 +56,7 @@
         "lodash": "^4.17.21",
         "logger": "1.0.0",
         "moment": "^2.29.1",
+        "p-limit": "^3.1.0",
         "pretty-format": "^26.6.2",
         "reflect-metadata": "^0.1.13",
         "storage-documents": "1.0.0",
