--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -37,7 +37,7 @@
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
         "jest-junit": "^12.0.0",
-        "mockdate": "^3.0.2",
+        "mockdate": "^3.0.5",
         "node-loader": "^1.0.2",
         "npm-force-resolutions": "^0.0.3",
         "npm-run-all": "^4.1.5",
@@ -68,6 +68,7 @@
         "lodash": "^4.17.21",
         "logger": "1.0.0",
         "moment": "^2.29.1",
+        "p-limit": "^3.1.0",
         "puppeteer": "^5.5.0",
         "reflect-metadata": "^0.1.13",
         "scanner-global-library": "1.0.0",
