--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -41,6 +41,7 @@
         "got": "^11.8.1",
         "inversify": "^5.0.5",
         "lodash": "^4.17.21",
+        "normalize-path": "^3.0.0",
         "raw-body": "^2.4.1",
         "reflect-metadata": "^0.1.13",
         "serialize-error": "^8.0.1",
