--- a/packages/web-api-scan-runner/docker-image-config/Dockerfile
+++ b/packages/web-api-scan-runner/docker-image-config/Dockerfile
@@ -1,24 +1,30 @@
 # Copyright (c) Microsoft Corporation. All rights reserved.
 # Licensed under the MIT License.
 
-FROM mcr.microsoft.com/windows:1809-amd64
+FROM mcr.microsoft.com/windows/servercore:1809-amd64
 
 ENV NODE_VERSION 12.21.0
 
 USER ContainerAdministrator
 
 RUN powershell Set-ExecutionPolicy RemoteSigned
-RUN setx /m PATH "%PATH%;C:\nodejs"
 RUN powershell -Command \
     Invoke-WebRequest $('https://nodejs.org/dist/v{0}/node-v{0}-win-x64.zip' -f $env:NODE_VERSION) -OutFile 'node.zip' -UseBasicParsing ; \
     Expand-Archive node.zip -DestinationPath C:\ ; \
     Rename-Item -Path $('C:\node-v{0}-win-x64' -f $env:NODE_VERSION) -NewName 'C:\nodejs'
+RUN setx /m PATH "%PATH%;C:\nodejs"
 
-# Bundle app source
+# Install fonts to enable browser rendering
+ADD Fonts.tar /Fonts/
+WORKDIR /Fonts/
+RUN powershell -Command \
+    .\Add-Font.ps1 Fonts
+WORKDIR /
+
+# Bundle app package
 COPY . .
 
 # Install app dependencies
 RUN npm install
 
 ENTRYPOINT ["powershell.exe", "./web-api-scan-runner.ps1"]
-
