--- a/packages/scanner-global-library/package.json
+++ b/packages/scanner-global-library/package.json
@@ -35,7 +35,7 @@
         "typescript": "^4.1.3"
     },
     "dependencies": {
-        "@axe-core/puppeteer": "^4.2.0",
+        "@axe-core/puppeteer": "4.1.1",
         "axe-core": "4.2.0",
         "common": "^1.0.0",
         "inversify": "^5.0.5",
