Convert to multi-stage docker build to use fonts source

--- a/packages/web-api-scan-runner/docker-image-config/Dockerfile
+++ b/packages/web-api-scan-runner/docker-image-config/Dockerfile
@@ -1,12 +1,21 @@
 # Copyright (c) Microsoft Corporation. All rights reserved.
 # Licensed under the MIT License.
 
+# Multi-stage build
+
+FROM mcr.microsoft.com/windows:1809-amd64 as source
+
+# Copy Windows fonts to use in core image
+RUN powershell -Command \
+    Copy-Item -Path C:\Windows\Fonts -Exclude lucon.ttf -Destination C:\Fonts -Recurse
+
 FROM mcr.microsoft.com/windows/servercore:1809-amd64
 
 ENV NODE_VERSION 12.21.0
 
 USER ContainerAdministrator
 
+# Install Node.js
 RUN powershell Set-ExecutionPolicy RemoteSigned
 RUN powershell -Command \
     Invoke-WebRequest $('https://nodejs.org/dist/v{0}/node-v{0}-win-x64.zip' -f $env:NODE_VERSION) -OutFile 'node.zip' -UseBasicParsing ; \
@@ -15,11 +24,10 @@ RUN powershell -Command \
 RUN setx /m PATH "%PATH%;C:\nodejs"
 
 # Install fonts to enable browser rendering
-ADD Fonts.tar /Fonts/
-WORKDIR /Fonts/
+COPY --from=source /Fonts/ /Fonts/
+COPY Add-Font.ps1 .
 RUN powershell -Command \
-    .\Add-Font.ps1 Fonts
-WORKDIR /
+    .\Add-Font.ps1 Fonts >$null
 
 # Bundle app package
 COPY . .
