Increase dependabot PRs limit

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,7 @@ updates:
     interval: daily
     time: "11:00"
     timezone: "America/Los_Angeles" # Pacific Time
+  open-pull-requests-limit: 10
   labels:
   - "category: engineering"
   - dependencies
@@ -22,6 +23,7 @@ updates:
     day: wednesday
     time: "11:00"
     timezone: "America/Los_Angeles" # Pacific Time
+  open-pull-requests-limit: 20
   labels:
   - "category: engineering"
   - dependencies
