Revert tslib resolution

--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
         "socket.io-parser": ">=3.4.1",
         "marked": ">=1.1.1",
         "engine.io": ">=4.0.0",
-        "ssri": ">=8.0.1",
-        "tslib": ">=1.14.1"
+        "ssri": ">=8.0.1"
     }
 }
