--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "bootstrap": "npx lerna bootstrap",
         "clean": "npx lerna run clean --stream && rimraf dist test-results",
-        "cbuild": "npx syncpack fix-mismatches format --indent '    ' && yarn install && npx lerna run build --stream",
+        "cbuild": "npx syncpack fix-mismatches format --indent '    ' && yarn install && npx lerna run cbuild --stream",
         "build": "npx lerna run build --stream",
         "pack": "npx lerna run pack --stream",
         "test": "npx jest",
@@ -18,12 +18,12 @@
         "test:e2e": "npx jest functional-tests.local.spec.ts",
         "lint:check": "npx lerna run lint --stream",
         "lint:fix": "npx lerna run lint:fix --stream",
-        "precheckin": "npm-run-all --serial format:check lint:check copyright:check build test",
+        "precheckin": "npm-run-all --serial format:check lint:check copyright:check cbuild test",
         "format:fix": "npx prettier --write \"**/*\"",
         "format:check": "npx prettier --check \"**/*\"",
         "copyright:check": "license-check-and-add check -f ./license-check-and-add-config.json",
         "copyright:fix": "license-check-and-add add -f ./license-check-and-add-config.json",
-        "audit:fix": "npx yarn-audit-fix"
+        "audit": "lerna-audit"
     },
     "author": "Microsoft",
     "license": "MIT",
@@ -57,7 +57,7 @@
         "syncpack": "^5.7.11",
         "tslint": "^6.1.3",
         "typescript": "^4.3.2",
-        "yarn-audit-fix": "^6.3.1"
+        "lerna-audit": "^1.3.2"
     },
     "workspaces": {
         "packages": [
